--- a/resenas/src/app/app.html
+++ b/resenas/src/app/app.html
@@ -3,8 +3,8 @@
   <nav>
     <a routerLink="/">Inicio</a>
     <a routerLink="/juegos">Juegos</a>
-    <a routerLink="/personajes">Personajes</a>
-    <a routerLink="/reseñas">Reseñas</a>
+    <a routerLink="/noticias">Personajes</a>
+    <a routerLink="/resenas">Reseñas</a>
     <a routerLink="/contacto">Contacto</a>
   </nav>
 </header>
